https://bugs.webkit.org/show_bug.cgi?id=38368 <rdar://problem/7834433> REGRESSSION: 1.5% PLT regression due to 56028 (return memory quicker). Instead of returning everything but the smallest spans spread out the spans kept over several size lists.

Reviewed by Geoff Garen.

* wtf/FastMalloc.cpp:
(WTF::TCMalloc_PageHeap::scavenge):



Canonical link: https://commits.webkit.org/49985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58730 268f45cc-cd09-0410-ab3c-d52691b4dbfc